# AcceleratorCodeGen

./: .gitignore
AscendCBackend/: a_t2.py  ascendc.py  ascendc_2.py  ascendc_t2.py  ascendc_t3.py  ascendc_t4.py  at2.py  empty_kernel.py  libcheck.py  npu_info.py
AscendCBackend/.dacecache/ascendc_test_1/include/: ascendc_test_1.h  hash.h
AscendCBackend/.dacecache/ascendc_test_1/sample/: ascendc_test_1_main.cpp
AscendCBackend/.dacecache/ascendc_test_1/src/cpu/: ascendc_test_1.cpp
CubeUnitCodegen/: matmul.py  matmul_beta0.py  matmul_beta0_dcopy.py
CubeUnitCodegen/GEMMSample/: main.cpp
GeneralizedAutoTile/: matmul.py  matmul2.py  vadd_cpu.py
GeneralizedAutoTile/.dacecache/gemm/include/: gemm.h  hash.h
GeneralizedAutoTile/.dacecache/gemm/sample/: gemm_main.cpp
GeneralizedAutoTile/.dacecache/gemm/src/cpu/: gemm.cpp
GeneralizedAutoTile/.dacecache/gemm/src/cuda/: gemm_cuda.cu
GeneralizedAutoTile/.dacecache/vadd2/include/: hash.h  vadd2.h
GeneralizedAutoTile/.dacecache/vadd2/sample/: vadd2_main.cpp
GeneralizedAutoTile/.dacecache/vadd2/src/cpu/: vadd2.cpp
GeneratedVectorAdd/: CMakeLists.txt  common.h  load_lib.py  main.cpp  vadd.cce  vadd.cpp  vadd_flags.cce
GeneratedVectorAdd/cmake/Modules/: CMakeCCEInformation.cmake  CMakeDetermineCCECompiler.cmake
GeneratedVectorAdd/cmake/npu/: CMakeLists.txt
GeneratedVectorAdd2/: CMakeLists.txt  kernel_time_plot.py  main.cpp  stub.cpp  vadd.cpp
GeneratedVectorAdd2/Data/: gen.py
MatMul16/: CMakeLists.txt  main.cpp  matmul_custom.cpp  matmul_custom_tiling.h
MatMul16/Data/: C.txt  C_aclblas.txt  C_ref.txt  distances.py  distances2.py  gen.py  matmul.py  ref_cuda_matmul.cu  ref_half_cuda_matmul.cu
MatMul16/op_models/: gemm.json
MatMul16/scripts/: distance_matrix.py
NewBuild/: CMakeLists.txt
NewBuild/cmake/Modules/: CMakeDetermineCCECompiler.cmake
Scripts/: distance_matrix.py  matmul.py
SoftHierScratchpad/: generated_arch.py  opt.py  repr_matmul.py  repr_matmul_refactored.py  repr_vadd.py  vadd.py
SoftHierScratchpad/.dacecache/GEMM/include/: GEMM.h  hash.h
SoftHierScratchpad/.dacecache/GEMM/sample/: GEMM_main.cpp
SoftHierScratchpad/.dacecache/GEMM/src/cpu/: GEMM.cpp
SoftHierScratchpad/.dacecache/GEMM/src/soft_hier/: GEMM_soft_hier.shcc.c
Util/: util.h
VectorCopyBenchmark/: flag_vector_copy.cpp  npu_info.py  vector_copy.py
VectorCopyBenchmark/data_910b/: kernel_runtimes_no_sync_pipe_all_910b.csv  plotter.py
