cmake_minimum_required(VERSION 3.16)
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ASCEND_INSTALL_PATH $ENV{ASCEND_HOME_PATH})
set(ASCEND_CANN_PACKAGE_PATH ${ASCEND_INSTALL_PATH} CACHE STRING "ASCEND CANN package installation directory")
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${ASCEND_INSTALL_PATH}/tools/tikicpulib/lib/cmake)
set(RUN_MODE "ONBOARD" CACHE STRING "Choose the run mode: ONBOARD ro SIMULATOR.")
set(ASCEND_RUN_MODE ${RUN_MODE})

set(SOC_VERSION "ascend910" CACHE STRING "Choose SoC Version")
set(ASCEND_PRODUCT_TYPE ${SOC_VERSION})

set(ASCEND_CORE_TYPE "AiCore")
set(ASCEND_CUSTOM_TILING "NO_CUSTOM_TILING")

set(CCE_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
list(APPEND CMAKE_MODULE_PATH ${CCE_CMAKE_PATH})
project(kernel_samples LANGUAGES CCE)

set(smoke_testcase runner)

#set(CMAKE_CXX_SOURCE_FILE_EXTENSIONS cpp)
set(CMAKE_CCE_SOURCE_FILE_EXTENSIONS cce cpp)

add_subdirectory(cmake/npu)